--- a/template/abogado.html
+++ b/template/abogado.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Bienvenido Administrador</h1>
+    <h1>Bienvenido Abogado</h1>
     
 </body>
 </html>
