--- a/template/index.html
+++ b/template/index.html
@@ -11,7 +11,7 @@
 
             .caja{
                 margin: 10%;
-                margin-right: 30;
+                margin-right: 30%;
                 margin-left: 30%;
             }
 
