--- a/template/admin.html
+++ b/template/admin.html
@@ -1,12 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Administrador</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f9f9f9;
+        }
+        h1 {
+            text-align: center;
+            margin-bottom: 50px;
+        }
+        .container {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+            gap: 50px 100px;
+            justify-items: center;
+            align-items: center;
+        }
+        .card {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        button {
+            padding: 10px 20px;
+            background-color: #2979FF;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #1C54B2;
+        }
+    </style>
 </head>
 <body>
-    <h1>Bienvenido Administrador</h1>
-    
+
+    <div>
+        <h1>Administrador</h1>
+        <div class="container">
+            <div class="card">
+                <h3>Administrar Usuarios</h3>
+                <button>Ingresar</button>
+            </div>
+            <div class="card">
+                <h3>Sesiones Activas</h3>
+                <button>Ingresar</button>
+            </div>
+            <div class="card">
+                <h3>Actividad Reciente</h3>
+                <button>Ingresar</button>
+            </div>
+            <div class="card">
+                <h3>Administrar Usuarios</h3>
+                <button>Ingresar</button>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
