--- a/template/admin.html
+++ b/template/admin.html
@@ -1,72 +1,28 @@
-<!DOCTYPE html>
-<html lang="es">
+<!doctype html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Administrador</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f9f9f9;
-        }
-        h1 {
-            text-align: center;
-            margin-bottom: 50px;
-        }
-        .container {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            grid-template-rows: repeat(2, 1fr);
-            gap: 50px 100px;
-            justify-items: center;
-            align-items: center;
-        }
-        .card {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        button {
-            padding: 10px 20px;
-            background-color: #2979FF;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #1C54B2;
-        }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Admin</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 <body>
 
-    <div>
-        <h1>Administrador</h1>
-        <div class="container">
-            <div class="card">
-                <h3>Administrar Usuarios</h3>
-                <button>Ingresar</button>
-            </div>
-            <div class="card">
-                <h3>Sesiones Activas</h3>
-                <button>Ingresar</button>
-            </div>
-            <div class="card">
-                <h3>Actividad Reciente</h3>
-                <button>Ingresar</button>
-            </div>
-            <div class="card">
-                <h3>Administrar Usuarios</h3>
-                <button>Ingresar</button>
-            </div>
+    <nav class = "navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+            <a class = "navbar-brand fw-bolder" href="#">Administrador</a>
+            <span> Bienvenid@ {{session['name']}} <a href="{{url_for('logout')}}" class = "mx-3"> Salir  </a> </span>
+        </div>
+    </nav>
+
+<div class="container">
+    <div class = "card mt-3 w-25 mx-auto d-block">
+        <div class = "card-body d-flex">
+
         </div>
     </div>
+</div>
 
 </body>
 </html>
