Adicion del modulo de registro de usuarios habilitado para el administrador

--- a/template/index.html
+++ b/template/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -23,7 +24,7 @@
         <div class="caja">
 
             <form class = "form-control" action="accesp-login" method="post">
-                <h1>login</h1>
+                <h1 class= "text-center t">Login</h1>
                 {% if mensaje %}
                 {{mensaje}}
                 {% endif %}
