Se agrego la funcionalidad de eliminar usuarios al modulo del administrador

--- a/template/index.html
+++ b/template/index.html
@@ -12,12 +12,16 @@
 <body>
         <style>
 
+              @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
             .caja{
                 margin: 10%;
                 margin-right: 30%;
                 margin-left: 30%;
             }
-
+.t{
+    font-family: 'Lobster', cursive;
+}
 
         </style>
 
@@ -46,10 +50,6 @@
                     </div>
                 {% endif %}
 
-                <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Recordar esta contraseña</label>
-                </div>
                 <button type="submit" class="btn btn-primary">Ingresar</button>
                 </form>
 
