--- a/template/cabecera.html
+++ b/template/cabecera.html
@@ -29,14 +29,15 @@
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="">Inicio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/">Ingresar</a>
+          <a class="nav-link" href="/admin">Inicio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/registro">Registro</a>
         </li>
+          <li class="nav-item">
+          <a class="nav-link" href="/eliminar">Eliminar</a>
+        </li>
+
       </ul>
       <span class="navbar-text">
 
