--- a/template/cabecera.html
+++ b/template/cabecera.html
@@ -37,6 +37,9 @@
           <li class="nav-item">
           <a class="nav-link" href="/eliminar">Eliminar</a>
         </li>
+          <li class="nav-item">
+          <a class="nav-link" href="/listar">Listar Usuarios</a>
+        </li>
 
       </ul>
       <span class="navbar-text">
