--- a/template/cliente.html
+++ b/template/cliente.html
@@ -1,10 +1,9 @@
-{% include("cabecera.html")%}
 <!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Admin</title>
+    <title>Home User</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
@@ -12,7 +11,7 @@
 
     <nav class = "navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-            <a class = "navbar-brand fw-bolder" href="#">Administrador</a>
+            <a class = "navbar-brand fw-bolder" href="#">Cliente</a>
             <span> Bienvenid@ {{session['name']}} <a href="{{url_for('logout')}}" class = "mx-3"> Salir  </a> </span>
         </div>
     </nav>
